version 2020f, in progress
- VAR internals: scrap augmented Cholesky matrix; so the
  $system.C accessor is now a square matrix
- $system accessor: ensure presence of xlist member
- mread(): support reading gdt and gdtb files as matrices
- readfile(): support reading gzipped files
- "open" command: support reading selected series from
  native gretl datafiles (gdt, gdtb)
- "join" command: support $obsmajor as an outer key
- Fix bug: potential crash on "Save as icon and close" for
  a model displayed in tabbed model viewer
- Fix bug: possible crash on confusion between singleton
  array and array element within a loop
- Fix: memory leaks associated with GUI window lists

2020-11-21 version 2020e
- New function tdisagg() for temporal disaggregation
  (distribution and interpolation)
- New addon package "regls": supports LASSO, Ridge regression
  and Elastic net
- New function assert() for debugging purposes
- MPI: update documentation and support transfer of more
  data types
- kdensity() function: generalize to allow as argument a
  list or matrix with more than one column
- "dataset sortby": handle sorting by string-valued series
- OLS output: don't print out DW statistic when calculation of
  Durbin's h fails
- Fix: when extracting a column of a "dated" matrix, copy
  across the dates information
- Documentation: add material on forecasting for VARs and
  other multi-equation systems
- Improve format of panel plot when there are many unnamed
  individuals
- gretlcli and gretlmpi on MS Windows: accept unicode filenames
  on the command line
- "midasreg" command: be more flexible in parsing arguments to
  mds() terms
- Add to practice scripts: simulation using Klein model
- Implement the '^' operator (logical product) for string-
  valued series
- xlsx data importer: handle correctly the case where a given
  column is "partially" string-valued
- dbnomics data importer: handle absence of dimensions_labels
  in some cases