@@ -1,4 +1,6 @@
 version 2020f, in progress
+- quantile(): support variant methods Q7 and Q8 described
+  in Hyndman and Fan (1996)
 - VAR internals: scrap augmented Cholesky matrix; so the
   $system.C accessor is now a square matrix
 - $system accessor: ensure presence of xlist member
